--- a/comp229-f2016-lesson9-mvc/Web.config
+++ b/comp229-f2016-lesson9-mvc/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-comp229_f2016_lesson9_mvc-20161106113901.mdf;Initial Catalog=aspnet-comp229_f2016_lesson9_mvc-20161106113901;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <add name="MVCMusicStoreConnection" connectionString="data source=(localdb)\MSSQLLocalDB;initial catalog=MVCMusicStore;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
